--- a/index.css
+++ b/index.css
@@ -1,10 +1,3 @@
-/* :root {
-    --brand-main-color: #f56347;
-    --main-background-color: #fbd7b5;
-    --main-font-color: #0c2461;
-    --paragraph-font-color: #778791;
-  } */
-
 * {
   box-sizing: border-box;
   font-size: small;
@@ -40,14 +33,18 @@ button {
 }
 h5 {
   color: rgb(128, 128, 128, 0.5);
+  padding: 0 2rem;
 }
 .or {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  /* display: grid;
+  grid-template-columns: 1fr 1fr 1fr; */
+  display: flex;
+  flex-direction: row;
   width: 70%;
   margin: 0 auto;
 }
 .line {
+  flex: 1;
   align-self: center;
   height: 1px;
   background: rgb(128, 128, 128, 0.5);
